--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     },
     "keywords": [],
     "dependencies": {
-        "body-parser": "^1.20.1",
-        "polka": "^0.5.2",
         "@bot-whatsapp/bot": "latest",
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
-        "axios": "^1.2.1"
+        "axios": "^1.2.1",
+        "body-parser": "^1.20.1",
+        "polka": "^0.5.2"
     },
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "dotenv": "^16.0.3"
+    }
 }
