--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     },
     "keywords": [],
     "dependencies": {
-        "@bot-whatsapp/bot": "latest",
-        "@bot-whatsapp/cli": "latest",
-        "@bot-whatsapp/database": "latest",
-        "@bot-whatsapp/provider": "latest",
+        "@bot-whatsapp/bot": "^0.1.26",
+        "@bot-whatsapp/cli": "^0.1.26",
+        "@bot-whatsapp/database": "^0.1.26",
+        "@bot-whatsapp/portal": "^0.1.26",
+        "@bot-whatsapp/provider": "^0.1.26",
         "axios": "^1.2.1",
         "body-parser": "^1.20.1",
         "polka": "^0.5.2"
